corpus/cpp/exception_handling/case-01/snapshots/gcc15/dual_sink_structured/render.default.txt
note: some compiler details were not fully structured; original diagnostics are preserved
error: [exception_handling] exception handling disabled, use '-fexceptions' to enable
src/main.cpp: In function 'void f()':
    2 |     throw 1;
      |           ^
raw : src/main.cpp:2:11: error: exception handling disabled, use '-fexceptions' to enable @ src/main.cpp:2:11
| src/main.cpp:2:11
|     throw 1;
|           ^
note: exception handling disabled, use '[-fexceptions](https://gcc.gnu.org/onlinedocs/gcc-15.2.0/gcc/Code-Gen-Options.html#index-fexceptions)' to enable
details: --formed-explain | raw: --formed-raw